--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -8,9 +8,11 @@ WORKDIR /app
 
 COPY requirements.txt .
 
-RUN pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 5555
+ARG SERIAL_PORT
+ENV SERIAL_PORT=${SERIAL_PORT}
 
 CMD ["python", "server_serial.py"]
 
